--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -20,7 +20,6 @@ a {
   height: auto;
   display: flex;
   align-items: center;
-  padding-top: 100px;
   flex-direction: column;
 }
 
@@ -135,4 +134,39 @@ span {
   margin-left: 20px;
   text-decoration: none;
   color: white;
+}
+
+.postPage {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.leftSide {
+  flex: 50%;
+  height: calc(100vh - 70px);
+  display: grid;
+  place-items: center;
+}
+
+.rightSide {
+  flex: 50%;
+  height: calc(100vh - 70px);
+  display: grid;
+  place-items: center;
+}
+
+#individual {
+  height: 500px;
+  width: 600px;
+}
+
+#individual .title,
+#individual .footer {
+  font-size: 30px;
+}
+
+#individual .body {
+  font-size: 25px;
 }
