--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,7 +13,9 @@ a {
 
 * {
   box-sizing: border-box;
-}
+} */
+
+/* for Lesson css */
 
 .App {
   width: 100vw;
@@ -121,6 +123,8 @@ span {
   color: red;
 }
 
+/* NAVBAR */
+
 .navbar {
   width: 100%;
   height: 70px;
@@ -136,6 +140,7 @@ span {
   color: white;
 }
 
+/* INDIVIDUAL POST */
 .postPage {
   display: flex;
   flex-direction: row;
@@ -155,6 +160,50 @@ span {
   height: calc(100vh - 70px);
   display: grid;
   place-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.rightSide .addCommentContainer {
+  flex: 20%;
+  width: 100%;
+  display: grid;
+  place-items: center;
+  margin-top: 25px;
+}
+
+.addCommentContainer input,
+button {
+  width: 200px;
+  height: 50px;
+  border-radius: 8px;
+  border: none;
+}
+
+.addCommentContainer button {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.addCommentContainer input {
+  border: 2px solid dodgerblue;
+}
+
+.rightSide .listOfComments {
+  flex: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.listOfComments .comment {
+  width: 70%;
+  height: auto;
+  padding: 30px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  margin-top: 20px;
 }
 
 #individual {
@@ -169,4 +218,33 @@ span {
 
 #individual .body {
   font-size: 25px;
+}
+
+/* LOGIN */
+
+.loginContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  padding-top: 100px;
+}
+
+.loginContainer input,
+button {
+  width: 200px;
+  height: 50px;
+  border-radius: 8px;
+  border: none;
+  margin: 10px;
+}
+
+.loginContainer button {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.loginContainer input {
+  border: 2px solid dodgerblue;
 }
